Adding more tests for ambiguities.